2011-11-08  Albert Chu <chu11@llnl.gov>

	Merge branch ipmipet.

	* ipmi-pet/: New tool.

	* libfreeipmi/include/freeipmi/record-format/ipmi-platform-event-trap-record-format.h:
	New file.

	* common/src/toolcommon/: Update tool common function appropriately for new tool.

	* common/src/toolsensor/tool-sensor-common.h,
	common/src/toolsensor/tool-sensor-common.c (calculate_column_widths_ignored_sdr_cache,
	get_entity_id_string): New functions.

	* common/src/toolsdr/tool-sdr-cache-common.h,
	common/src/toolsdr/tool-sdr-cache-common.c (ipmi_sdr_cache_search_sensor_wrapper):
	Write new common function.

	* common/src/toolevent/: New common library.

	* ipmi-sel/: Update to use new convenience functions.

2011-11-01  Albert Chu <chu11@llnl.gov>

	* ipmi-raw/src/ipmi-raw.c: Code cleanup.  Output line numbers when
	there is an error on file/stdin input.
	
2011-10-31  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/src/ipmi-sel.c (_normal_output_date_and_time)
	(_normal_output_not_available_date_and_time): Split into date and
	time specific functions.  Adjust other code appropriately.
	
2011-10-28  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-entity-ids-spec.h,
	libfreeipmi/src/spec/ipmi-entity-ids-spec.c: Add new defines for
	non-standard entity ids to model sensor types code.

	* libfreeipmi/include/freeipmi/util/ipmi-entity-ids-util.h,
	libfreeipmi/src/util/ipmi-entity-ids-util.c: New file.

	* common/src/toolsensor/tool-sensor-common.c (get_entity_sensor_name_string):
	Use new library function.

	* ipmi-sel/src/ipmi-sel.c (_normal_output_sensor_name_and_type):
	Code cleanup, split function into _normal_output_sensor_name and
	_normal_output_sensor_type.  Update code accordingly.

        * libfreeipmi/src/fru-parse/,
        libfreeipmi/include/freeipmi/fru-parse/ipmi-fru-parse.h: Allow
        creation of FRU ctx with NULL ipmi_ctx.
	
2011-10-27  Albert Chu <chu11@llnl.gov>

	* Support new --sdr-cache-file option globally.
	