@@ -226,7 +226,8 @@ iRMC S1 and iRMC S2 systems, Intel S5500WB/Penguin Computing Relion
 Supermicro X8DTN, Supermicro X7SBI-LN4, Supermicro X8DTH, Supermicro
 X8DTG, Supermicro X8DTU, Supermicro X8DT3-LN4F, Supermicro X8DTU-6+,
 Supermicro X8DTL, Supermicro X8DTL-3F, Supermicro X8SIL-F, Supermicro
-X9SCL, Supermicro X9SCM, Supermicro X8DTN+-F, Supermicro X8SIE
+X9SCL, Supermicro X9SCM, Supermicro X8DTN+-F, Supermicro X8SIE,
+Supermicro X9SCA-F-O.
 .SH "EXAMPLES"
 .B # ipmi-sensors 
 .PP
