@@ -123,6 +123,7 @@ extern "C" {
  * Supermicro X9SCM
  * Supermicro X8DTN+-F (X8DTNPLUS_F)
  * Supermicro X8SIE
+ * Supermicro X9SCA-F-O (X9SCA-F-O)
  */
 /* achu: not official names, named based on use context */
 #define IPMI_SENSOR_TYPE_OEM_SUPERMICRO_CPU_TEMP 0xC0 
