@@ -2054,6 +2054,7 @@ ipmi_get_oem_event_bitmask_message (uint32_t manufacturer_id,
    * Supermicro X9SCM
    * Supermicro X8DTN+-F (X8DTNPLUS_F)
    * Supermicro X8SIE
+   * Supermicro X9SCA-F-O (X9SCA_F_O)
    *
    * Event Reading Type Code = IPMI_EVENT_READING_TYPE_CODE_OEM_SUPERMICRO_GENERIC
    * Sensor Type = IPMI_SENSOR_TYPE_OEM_SUPERMICRO_CPU_TEMP
@@ -2084,7 +2085,8 @@ ipmi_get_oem_event_bitmask_message (uint32_t manufacturer_id,
 	      || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X9SCL
 	      || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X9SCM
 	      || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8DTNPLUS_F
-	      || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8SIE))
+	      || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8SIE
+	      || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X9SCA_F_O))
       || (manufacturer_id == IPMI_IANA_ENTERPRISE_ID_MAGNUM_TECHNOLOGIES
 	  && product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8DTL))
     {
@@ -2362,6 +2364,7 @@ ipmi_get_event_messages (uint8_t event_reading_type_code,
    * Supermicro X9SCM
    * Supermicro X8DTN+-F (X8DTNPLUS_F)
    * Supermicro X8SIE
+   * Supermicro X9SCA-F-O (X9SCA_F_O)
    *
    * Note: Early Supermicro motherboards used the "Peppercon" Manufacturer ID
    * Note: Some Supermicro motherboards are rebranded with random manufacturer IDs
@@ -2386,7 +2389,8 @@ ipmi_get_event_messages (uint8_t event_reading_type_code,
 		       || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X9SCL
 		       || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X9SCM
 		       || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8DTNPLUS_F
-		       || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8SIE))
+		       || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8SIE
+		       || product_id == IPMI_SUPERMICRO_PRODUCT_ID_X9SCA_F_O))
 	       || (manufacturer_id == IPMI_IANA_ENTERPRISE_ID_MAGNUM_TECHNOLOGIES
 		   && product_id == IPMI_SUPERMICRO_PRODUCT_ID_X8DTL))
            && event_reading_type_code == IPMI_EVENT_READING_TYPE_CODE_OEM_SUPERMICRO_GENERIC)
