@@ -1,5 +1,9 @@
 2011-11-08  Albert Chu <chu11@llnl.gov>
 
+	* Support Supermicro X9SCA-F-O OEM sensors.
+
+2011-11-08  Albert Chu <chu11@llnl.gov>
+
 	Merge branch ipmipet.
 
 	* ipmi-pet/: New tool.
